# NoteWise_AI

./: .gitignore  GEMINI.md  app.py  main.py  pyproject.toml  requirements.txt  tools.py
study_notes_ai/: agent.py  main.py  pyproject.toml
